--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <p> no deberias estar aqui</p>
     <p><a href="/act 4/"> Actividad 4 Diseño </a> </p>
-    -andre
+    <p> -andre </p>
   </body>
 </html>
