--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </header>
   <body>
     <p> no deberias estar aqui</p>
-    <p><a href="/act 4/"> Actividad 4 Diseño </a> </p>
+    <p><a href="./act 4/"> Actividad 4 Diseño </a> </p>
     <p> -andre </p>
   </body>
 </html>
